# agent_ecology2

./: .claim.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  KERNEL_ONLY_README.md  Makefile  README.md  check  claude.md  doc_graph.html  docker-compose.yml  meta-process.yaml  pyproject.toml  repomix.core.json  repomix.meta-process.json  requirements-dev.txt  requirements.txt  run.py  voyager_minecraft.txt
.claude/: active-work.yaml  handoff_template.md  meta-config.yaml  sessions.yaml  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  ci-disabled  pull_request_template.md
acceptance_gates/: CLAUDE.md  artifacts.yaml  meta-process-tooling.yaml  shared.yaml
config/: CLAUDE.md  config.yaml  schema.yaml
dashboard-v2/: CLAUDE.md  package-lock.json  package.json  vite.config.ts
data/: doc_index.json
docs/: AGENT_HANDBOOK.md  ARCHITECTURE_DECISIONS_2026_01.md  CLAUDE.md  CONCEPTUAL_MODEL.yaml  CONCEPTUAL_MODEL_FULL.yaml  CONCERNS.md  Central_Governance_Planning.md  DEFERRED_FEATURES.md  DESIGN_CLARIFICATIONS.md  DIAGRAMS_DRAFT.md  DOCKER.md  DOCUMENTATION_ASSESSMENT_2026_01_16.md  EXPLORATION_NOTES_288.md  EXTERNAL_REVIEW_PACKAGE.md  FALLBACKS.md  GETTING_STARTED.md  GLOSSARY.md  GLOSSARY_CURRENT.md  GLOSSARY_TARGET.md  HTML_DASHBOARD.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_RESOURCE_MODEL.md  MULTI_CC_ANALYSIS.md  ONTOLOGY.yaml  ORACLE_AUCTION_DESIGN.md  PHYSICS_FIRST.md  POST_SIMULATION_ANALYSIS.md  PRIORITIZED_ACTIONS_2026_01_16.md  RESOURCE_MODEL.md  SCHEMA_AUDIT.md  SECURITY.md  SIMULATION_LEARNINGS.md  TASK_LOG.md  THESIS.md  THREAT_MODEL.md  UNCERTAINTIES.md  V1_ACCEPTANCE.md  (+6 more)
(+1351 files in other folders)
